add docker-compose